terraform-monolithic/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    ingressClassName: "gce"
spec:
  defaultBackend:
    service:
      name: fastapi-service
      port:
        number: 8000
